07-ingress-annotation/haproxytech.ingress.kubernetes.io.yaml
#haproxytech.ingress.kubernetes.io.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.class: "haproxy"
    ingress.kubernetes.io/path-rewrite: /
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
